default/objects/Objective__c/Objective__c.object-meta.xml
<CustomObject>
    <label>Objective</label>
    <nameField>
        <displayFormat>Objective-{00000}</displayFormat>
        <label>Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>