default/objects/Objective__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>e.g. Company, Personal, Career</description>
    <label>Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>