default/objects/Objective__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Date on which the objective was closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>