default/objects/Objective__c/fields/Company_Objective__c.field-meta.xml
<CustomField>
    <fullName>Company_Objective__c</fullName>
    <description></description>
    <label>Company Objective</label>
    <length>32</length>
    <type>Text</type>
</CustomField>