default/objects/Objective__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date the objective should be completed by</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>