default/objects/Objective__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>32</length>
    <type>Text</type>
</CustomField>