default/objects/Objective__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Date the objective should be reviewed</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>