default/objects/Objective__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of objective. e.g. &#39;Active&#39;, &#39;Draft&#39;, &#39;Complete&#39;</description>
    <label>Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>