default/objects/Objective__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>240</length>
    <required>true</required>
    <type>Text</type>
</CustomField>