default/objects/Objective__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Visibility of an objective, e.g. &#39;public&#39;, &#39;team&#39;, &#39;private&#39;.</description>
    <label>Visibility</label>
    <length>32</length>
    <type>Text</type>
</CustomField>